--- a/claiming-dtc.html
+++ b/claiming-dtc.html
@@ -310,6 +310,7 @@
 <ul>
 <li><a href="#h-1">Who can claim the DTC</a></li>
 <li><a href="#h-2">Claiming for the 2024 tax year</a></li>
+<li><a href="#h-4">How to claim the DTC on your tax return</a></li>
 <li><a href="#h-3">Claiming for past years</a></li>
 </ul>
 <h2 id="h-1">Who can claim the DTC</h2>
@@ -317,7 +318,8 @@
 <p>If they do not need the full disability amount to reduce their income tax, they may transfer the remaining amount.</p>
 <h3>If the CRA needs more information</h3>
 <p>In some cases, the CRA may send a letter asking for additional information to confirm who is claiming the credit. The letter will contain a reference number and instructions on what to do.</p>
-<h2 id="h-2">Claiming for the 2024 tax year</h2>
+
+<h2 id="h-2">Claim amounts for the 2024 tax year</h2>
 <p>Approved applicants who are 18 years and older (on the last day of the year) may claim the base disability amount. Those who are under 18 years old (on the last day of the year) may also claim the supplement for children with disabilities.</p>
 <p>Disability amounts for the 2024 tax year:</p>
 <div class="cnjnctn-type-or cnjnctn-sm"><div class="cnjnctn-col"><h3 class="mrgn-tp-sm"><strong>18 and older</strong> <span class="wb-inv">: Option 1 of 2</span></h3>
@@ -338,7 +340,7 @@
 </ul>
 </div>
 </div>
-<h3>How to claim the DTC on your tax return</h3>
+<h2 id="h-4">How to claim the DTC on your tax return</h2>
 <p>To claim the credit for the current tax year, you must enter the disability amount on your tax return. Any unused amount may be transferred to a supporting family member. It is not refunded.</p>
 <h3 id="h-1-1">Transferring the credit</h3>
 <p>If the person with the impairment does not need the entire disability amount to reduce their income tax, they may transfer some or all of the disability amount to the supporting family member who is identified on the DTC application form (Part&nbsp;A&nbsp;question&nbsp;2).</p>
