--- a/claiming-dtc.html
+++ b/claiming-dtc.html
@@ -309,7 +309,7 @@
 <h2 class="h3">On this page</h2>
 <ul>
 <li><a href="#h-1">Who can claim the DTC</a></li>
-<li><a href="#h-2">Claiming for the 2024 tax year</a></li>
+<li><a href="#h-2">Claim amount for the 2024 tax year</a></li>
 <li><a href="#h-4">How to claim the DTC on your tax return</a></li>
 <li><a href="#h-3">Claiming for past years</a></li>
 </ul>
