--- a/sred-support-services.html
+++ b/sred-support-services.html
@@ -280,40 +280,62 @@
 </div>
 
 <div class="container"><section class="gc-srvinfo">
-	<h2>Task 1</h2>
+	<h2>Learn about the program</h2>
 	<div class="row wb-eqht-grd">
         <div class="col-lg-4 col-md-6">
-			<h3><a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/sred-support-services/sred-webinars.html">SR&amp;ED webinars</a></h3>
-			<p>SR&amp;ED information webinars, provided in English and French, can give a general overview of the SR&amp;ED program, including eligibility criteria, allowable expenditures, and how to prepare a claim for SR&amp;ED tax incentives.</p>
+			<h3><a href="#">Attend an information session</a></h3>
+			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
+                euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </p>
 		</div><div class="col-lg-4 col-md-6">
-			<h3><a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/self-assessment-learning-tool.html">Self-Assessment and Learning Tool (SALT)</a></h3>
-			<p>This online self-assessment tool helps you determine if your work is eligible for SR&amp;ED tax incentives and what information you need to complete your claim. It can also estimate the investment tax credit (ITC) you may be able to get.</p>
+			<h3><a href="#">Visit our multimedia gallery</a></h3>
+			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
+                euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </p>
 		</div><div class="col-lg-4 col-md-6">
-			<h3><a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/sred-support-services/pre-claim-consultation.html">Pre-claim consultation</a></h3>
-			<p>The Pre-claim consultation service can help you identify if there is SR&amp;ED work in any of your projects before you submit a claim for SR&amp;ED tax incentives.</p>
-		</div><div class="col-lg-4 col-md-6">
-			<h3><a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/sred-support-services/sred-outreach.html">SR&amp;ED outreach program</a></h3>
-			<p>The Outreach program offers a variety of education products to businesses conducting SR&amp;ED work in Canada. This includes presentations, speaking at events, and providing products tailored to your industry.</p>
+			<h3><a href="#">Tailored outreach session</a></h3>
+			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
+                euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </p>
 		</div>
     </div>
 
    
-        <h2>Task 2</h2>
+        <h2>Submitting your first claim</h2>
         <div class="row wb-eqht-grd">
             <div class="col-lg-4 col-md-6">
-                <h3><a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/sred-support-services/first-time-claimant-advisory-service.html">First-Time Claimant Advisory Service (FTCAS)</a></h3>
-                <p>The First-Time Claimant Advisory Service (FTCAS) is a mandatory service that provides selected SR&amp;ED claimants with recommendations and guidance for future claims.</p>
+                <h3><a href="#">Self-assessment and Learning Tool (SALT)</a></h3>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
+                    euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </p>
             </div><div class="col-lg-4 col-md-6">
-                <h3><a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/sred-support-services/sred-service-visit.html">SR&amp;ED service visit</a></h3>
-                <p>The SR&amp;ED service visit is an optional service that gives claimants an opportunity to discuss any aspect of the SR&amp;ED program with a CRA representative. The virtual visit is initiated by the CRA and can provide guidance for future claims.</p>
+                <h3><a href="#">Client portal</a></h3>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
+                    euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </p>
+            </div>
+            <div class="col-lg-4 col-md-6">
+                <h3><a href="#">Contact an SR&ED specialist</a></h3>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
+                    euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </p>
+            </div><div class="col-lg-4 col-md-6">
+                <h3><a href="#">How to file your claim</a></h3>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
+                    euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </p>
             </div>
         
         </div>
-        <h2>Task 3</h2>
+        <h2>Resources for existing claimants</h2>
         <div class="row wb-eqht-grd">
             <div class="col-lg-4 col-md-6">
-                <h3><a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/contact-sred.html">Contact us</a></h3>
-                <p>Call us if you have any questions about the SR&amp;ED program, including eligibility, calculating expenditures or an investment tax credit, or submitting your claim.</p>
+                <h3><a href="#">Request a pre-claim consultation
+                </a></h3>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
+                    euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </p>
+            </div>
+            <div class="col-lg-4 col-md-6">
+                <h3><a href="#">First-Time Claimant Advisory Service (FTCAS)</a></h3>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
+                    euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </p>
+            </div><div class="col-lg-4 col-md-6">
+                <h3><a href="#">SR&amp;ED service visit</a></h3>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
+                    euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </p>
             </div>
         </div>
 </section>
