--- a/sred-support-services2.html
+++ b/sred-support-services2.html
@@ -305,13 +305,13 @@
     <p>The Pre-claim consultation service can help you identify if there is SR&amp;ED work in any of your projects before you submit a claim for SR&amp;ED tax incentives.</p>
 
 </div>
-<div id="myTag2">
+<div id="myTag2" class="hidden">
     <h3><a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/sred-support-services/sred-outreach.html">SR&amp;ED outreach program</a></h3>
     <p>The Outreach program offers a variety of education products to businesses conducting SR&amp;ED work in Canada. This includes presentations, speaking at events, and providing products tailored to your industry.</p>
     <h3><a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/contact-sred.html">Contact us</a></h3>
     <p>Call us if you have any questions about the SR&amp;ED program, including eligibility, calculating expenditures or an investment tax credit, or submitting your claim.</p>
 </div>
-<div id="myTag3">
+<div id="myTag3" class="hidden">
    
     <h3><a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/sred-support-services/first-time-claimant-advisory-service.html">First-Time Claimant Advisory Service (FTCAS)</a></h3>
     <p>The First-Time Claimant Advisory Service (FTCAS) is a mandatory service that provides selected SR&amp;ED claimants with recommendations and guidance for future claims.</p>
