--- a/sred-support-services2.html
+++ b/sred-support-services2.html
@@ -284,7 +284,20 @@
         <p>Get help preparing your SR&amp;ED claim using support services and tools from the CRA.</p>
         <p>Select a task from the drop down menu to find related tools and services</p>
 
-<select name="taskDropdown" class="wb-tagfilter-ctrl">
+
+        <div class="wb-frmvld"><form>
+            <div class="wb-fieldflow" data-wb-fieldflow='{"noForm": true, "inline": true}'>
+                <p>Select a task from the drop down menu to find related tools and services</p>
+                <ul>
+                    <li data-wb-fieldflow='{"action":"toggle", "toggle": "#mytag"}'>(Set 1) Nunc sed mauris id nisi molestie porta at quis erat.</li>
+                    <li data-wb-fieldflow='{"action":"toggle", "toggle": "#mytag2"}'>(Set 2) Vestibulum pretium tortor vel facilisis sodales.</li>
+                    <li data-wb-fieldflow='{"action":"toggle", "toggle": "#mytag3"}'>(Set 3) Nunc sit amet dui ut justo efficitur dapibus.</li>
+                    <li data-wb-fieldflow='{"action":"toggle", "toggle": "#mytag4"}'>(Set 4) Praesent at purus ut turpis sollicitudin aliquam.</li>
+                    <li data-wb-fieldflow='{"action":"toggle", "toggle": "#mytag5"}'>(Set 5) <em>Sed eget dui ac <strong>nunc mattis</strong> consequat</em> in a ex.</li>
+                </ul>
+            </div>
+        </form></div>
+<!-- <select name="taskDropdown" class="wb-tagfilter-ctrl">
 	<option value="">All</option>
 	<option value="myTag">My tag</option>
 	<option value="myTag2">My tag 2</option>
@@ -292,7 +305,7 @@
     <option value="myTag">My tag</option>
 	<option value="myTag2">My tag 2</option>
 	<option value="myTag3">My tag 3</option>
-</select>
+</select> -->
 
 
 
