adding web version to read me page

--- a/DTC/rc193.html
+++ b/DTC/rc193.html
@@ -271,7 +271,47 @@
 
 
 
-    <h1 id="wb-cont">RC193 Service Feedback</h1><!--Rescue link--><section data-ajax-replace="https://www.canada.ca/content/dam/cra-arc/formspubs/include/pbg/rc193.txt#rc193-rescue-eng"></section><!--Alert space--><div><section><p>Use the RC193 Service Feedback form to submit feedback about your service experience with the Canada Revenue Agency (CRA).</p><p>Select a form option to:</p><ul><li>Send a service complaint, suggestion or compliment</li><li>Discuss an accessibility barrier or the <em>CRA Accessibility Plan</em></li></ul></section></div><section data-ajax-replace="https://www.canada.ca/content/dam/cra-arc/formspubs/include/pbg/rc193.txt#rc193-eng"></section><!--PDF instructions--><section id="instructions" class="mfp-hide modal-dialog modal-content overlay-def"><header class="modal-header"><h2 class="modal-title">Download instructions for fillable PDFs</h2></header><div class="modal-body"><section data-ajax-replace="https://www.canada.ca/content/dam/cra-arc/formspubs/include/pdf-instructions.txt#pdf-forms-eng"><p class="mrgn-tp-md">You <strong>must download</strong> the accessible fillable PDF to your computer. Use <a href="https://get.adobe.com/reader/">Acrobat Reader 10 or later</a> to open the file. Do <strong>not</strong> click the link to open it in your web browser. </p><ol><li>Download and save the PDF to your computer</li><li>Open the downloaded PDF in Acrobat Reader 10 or later</li></ol></section></div></section><!--Description--><!--Ways to get the form--><h2>Ways to get the form</h2><ul class="fa-ul"><!--Online--><li><span class="fas fa-laptop text-muted fa-lg fa-li"></span><h3>Use the online form</h3><ul><li><a href="https://apps.cra-arc.gc.ca/ebci/uisp/rc193/entry/en.html">Submit service feedback (web version)</a></li></ul></li><!--Fillable--><li><span class="fas fa-file-download text-muted fa-lg fa-li"></span><h3>Download and fill out with Acrobat Reader</h3><p class="mrgn-bttm-md">You <strong>must </strong><a class="wb-lbx" href="#instructions">download and open fillable <span class="nowrap">PDFs<span class="far fa-question-circle mrgn-lft-sm"></span></span></a> in Acrobat Reader 10 or higher.</p><ul><li><a href="https://www.canada.ca/content/dam/cra-arc/formspubs/pbg/rc193/rc193-fill-24e.pdf" download="rc193-fill-24e.pdf"><span class="wb-inv">Accessible</span> Fillable PDF (rc193-fill-24e.pdf)</a></li></ul></li><!--Flat--><li><span class="fas fa-pencil-alt text-muted fa-lg fa-li"></span><h3>Print and fill out by hand</h3><ul><li><a href="https://www.canada.ca/content/dam/cra-arc/formspubs/pbg/rc193/rc193-24e.pdf">Standard print PDF (rc193-24e.pdf)</a></li><li><a href="https://www.canada.ca/content/dam/cra-arc/formspubs/pbg/rc193/rc193-lp-24e.pdf">Large print PDF (rc193-lp-24e.pdf)</a></li></ul></li><!--E-text--><!--Order Alt Format--><li><span class="fas fa-universal-access text-muted fa-lg fa-li"></span><section data-ajax-replace="https://www.canada.ca/content/dam/cra-arc/formspubs/include/altformat.txt#altformat-eng"><h3>Ask for an alternate format</h3><p>You can order alternate formats such as digital audio, electronic text, braille, and large print.</p><ul><li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/help-forms-publications/about-multiple-formats.html">Order alternate formats for persons with disabilities</a></li></ul></section></li></ul><!--Instructions--><section data-ajax-replace="/content/canadasite/en/revenue-agency/services/forms-publications/forms/rc193/instructions.html#instr"></section><!--Related documents--><h2>Related documents</h2><ul><li><a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/taxpayer-bill-rights.html">Taxpayer Bill of Rights</a></li><li><a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/accessibility/plan-2023-2025.html">CRA Accessibility Plan</a></li></ul>
+    <h1 id="wb-cont">RC193 Service Feedback</h1>
+	<!--Rescue link-->
+	<section data-ajax-replace="https://www.canada.ca/content/dam/cra-arc/formspubs/include/pbg/rc193.txt#rc193-rescue-eng">
+
+	</section>
+	<!--Alert space-->
+	<div><section>
+		<p>Use the RC193 Service Feedback form to submit feedback about your service experience with the Canada Revenue Agency (CRA).</p>
+		<p>Select a form option to:</p>
+		<ul>
+			<li>Send a service complaint, suggestion or compliment</li>
+			<li>Discuss an accessibility barrier or the <em>CRA Accessibility Plan</em></li>
+		</ul></section></div>
+		<section data-ajax-replace="https://www.canada.ca/content/dam/cra-arc/formspubs/include/pbg/rc193.txt#rc193-eng">
+
+		</section>
+		<!--PDF instructions-->
+		<section id="instructions" class="mfp-hide modal-dialog modal-content overlay-def">
+			<header class="modal-header">
+				<h2 class="modal-title">Download instructions for fillable PDFs</h2>
+			</header><div class="modal-body">
+				<section data-ajax-replace="https://www.canada.ca/content/dam/cra-arc/formspubs/include/pdf-instructions.txt#pdf-forms-eng">
+					<p class="mrgn-tp-md">You <strong>must download</strong> the accessible fillable PDF to your computer. Use <a href="https://get.adobe.com/reader/">Acrobat Reader 10 or later</a> to open the file. Do <strong>not</strong> click the link to open it in your web browser. </p>
+					<ol>
+						<li>Download and save the PDF to your computer</li>
+						<li>Open the downloaded PDF in Acrobat Reader 10 or later</li>
+					</ol>
+				</section>
+			</div>
+		</section>
+		<!--Description--><!--Ways to get the form-->
+		<h2>Ways to get the form</h2><ul class="fa-ul">
+			<!--Online-->
+			<li><span class="fas fa-laptop text-muted fa-lg fa-li"></span>
+				<h3>Use the online form</h3>
+				<ul>
+					<li><a href="https://apps.cra-arc.gc.ca/ebci/uisp/rc193/entry/en.html">Submit service feedback (web version)</a></li>
+				</ul>
+			</li>
+			<!--Fillable-->
+			<li><span class="fas fa-file-download text-muted fa-lg fa-li"></span><h3>Download and fill out with Acrobat Reader</h3><p class="mrgn-bttm-md">You <strong>must </strong><a class="wb-lbx" href="#instructions">download and open fillable <span class="nowrap">PDFs<span class="far fa-question-circle mrgn-lft-sm"></span></span></a> in Acrobat Reader 10 or higher.</p><ul><li><a href="https://www.canada.ca/content/dam/cra-arc/formspubs/pbg/rc193/rc193-fill-24e.pdf" download="rc193-fill-24e.pdf"><span class="wb-inv">Accessible</span> Fillable PDF (rc193-fill-24e.pdf)</a></li></ul></li><!--Flat--><li><span class="fas fa-pencil-alt text-muted fa-lg fa-li"></span><h3>Print and fill out by hand</h3><ul><li><a href="https://www.canada.ca/content/dam/cra-arc/formspubs/pbg/rc193/rc193-24e.pdf">Standard print PDF (rc193-24e.pdf)</a></li><li><a href="https://www.canada.ca/content/dam/cra-arc/formspubs/pbg/rc193/rc193-lp-24e.pdf">Large print PDF (rc193-lp-24e.pdf)</a></li></ul></li><!--E-text--><!--Order Alt Format--><li><span class="fas fa-universal-access text-muted fa-lg fa-li"></span><section data-ajax-replace="https://www.canada.ca/content/dam/cra-arc/formspubs/include/altformat.txt#altformat-eng"><h3>Ask for an alternate format</h3><p>You can order alternate formats such as digital audio, electronic text, braille, and large print.</p><ul><li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/help-forms-publications/about-multiple-formats.html">Order alternate formats for persons with disabilities</a></li></ul></section></li></ul><!--Instructions--><section data-ajax-replace="/content/canadasite/en/revenue-agency/services/forms-publications/forms/rc193/instructions.html#instr"></section><!--Related documents--><h2>Related documents</h2><ul><li><a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/taxpayer-bill-rights.html">Taxpayer Bill of Rights</a></li><li><a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/accessibility/plan-2023-2025.html">CRA Accessibility Plan</a></li></ul>
 
 
 </div>
