--- a/DTC/claiming-dtc.html
+++ b/DTC/claiming-dtc.html
@@ -309,6 +309,7 @@
 <h2 class="h3">On this page</h2>
 <ul>
 <li><a href="#h-1">Who can claim the DTC</a></li>
+<li><a href="trnsfr">Transferring the credit</a></li>
 <li><a href="#h-2">Claim amount for the 2024 tax year</a></li>
 <li><a href="#h-4">How to claim the DTC on your tax return</a></li>
 <li><a href="#h-3">Claiming for past years</a></li>
@@ -319,6 +320,21 @@
 <h3>If the CRA needs more information</h3>
 <p>In some cases, the CRA may send a letter asking for additional information to confirm who is claiming the credit. The letter will contain a reference number and instructions on what to do.</p>
 
+<h2 id="h-1-1">Transferring the credit</h2>
+<p>If the person with the impairment does not need the entire disability amount to reduce their income tax, they may transfer some or all of the disability amount to the supporting family member who is identified on the DTC application form (Part&nbsp;A&nbsp;question&nbsp;2).</p>
+<h3>Who qualifies as a supporting family member</h3>
+<p>A supporting family member is someone who the person with the impairment depends on for at least 1 of the <strong>basic necessities of life</strong> (food, shelter, and clothing).</p>
+<p>The family member must be <strong>1</strong> of the following:</p>
+<ul class="fa-ul">
+<li><span class="fas fa-check text-success fa-li" aria-hidden="true"></span>their spouse or common-law partner</li>
+<li><span class="fas fa-check text-success fa-li" aria-hidden="true"></span>their child or grandchild</li>
+<li><span class="fas fa-check text-success fa-li" aria-hidden="true"></span>their parent, grandparent, brother, sister, uncle, aunt, niece, or nephew</li>
+<li><span class="fas fa-check text-success fa-li" aria-hidden="true"></span>a child or grandchild of their spouse or common-law partner</li>
+<li><span class="fas fa-check text-success fa-li" aria-hidden="true"></span>a parent, grandparent, brother, sister, uncle, aunt, niece, or nephew of their spouse or common-law partner</li>
+</ul>
+<h3>How to transfer the credit</h3>
+<p>If the supporting family member who wants to claim the credit was not identified on the initial application, they can submit a written request to the CRA for the transfer. This request must be signed and include details of the support they provide for the basic necessities of life.</p>
+<p>If the supporting family member was identified on the initial application, and it is approved, go to: <a href="">Transfer part or all of your claim</a></p>
 <h2 id="h-2">Claim amounts for the 2024 tax year</h2>
 <p>Approved applicants who are 18 years and older (on the last day of the year) may claim the base disability amount. Those who are under 18 years old (on the last day of the year) may also claim the supplement for children with disabilities.</p>
 <p>Disability amounts for the 2024 tax year:</p>
@@ -342,19 +358,6 @@
 </div>
 <h2 id="h-4">How to claim the DTC on your tax return</h2>
 <p>To claim the credit for the current tax year, you must enter the disability amount on your tax return. Any unused amount may be transferred to a supporting family member. It is not refunded.</p>
-<h3 id="h-1-1">Transferring the credit</h3>
-<p>If the person with the impairment does not need the entire disability amount to reduce their income tax, they may transfer some or all of the disability amount to the supporting family member who is identified on the DTC application form (Part&nbsp;A&nbsp;question&nbsp;2).</p>
-<details><summary>Who qualifies as a supporting family member</summary><p>A supporting family member is someone who the person with the impairment depends on for at least 1 of the <strong>basic necessities of life</strong> (food, shelter, and clothing).</p>
-<p>The family member must be <strong>1</strong> of the following:</p>
-<ul class="fa-ul">
-<li><span class="fas fa-check text-success fa-li" aria-hidden="true"></span>their spouse or common-law partner</li>
-<li><span class="fas fa-check text-success fa-li" aria-hidden="true"></span>their child or grandchild</li>
-<li><span class="fas fa-check text-success fa-li" aria-hidden="true"></span>their parent, grandparent, brother, sister, uncle, aunt, niece, or nephew</li>
-<li><span class="fas fa-check text-success fa-li" aria-hidden="true"></span>a child or grandchild of their spouse or common-law partner</li>
-<li><span class="fas fa-check text-success fa-li" aria-hidden="true"></span>a parent, grandparent, brother, sister, uncle, aunt, niece, or nephew of their spouse or common-law partner</li>
-</ul>
-</details>
-<p>If the supporting family member who wants to claim the credit was not identified on the initial application, they can submit a written request to the CRA for the transfer. This request must be signed and include details of the support they provide for the basic necessities of life.</p>
 
 
 <dl class="dl-horizontal dt-max brdr-0 mrgn-bttm-sm">
@@ -362,7 +365,8 @@
 </dd> <dt class="h3 mrgn-tp-0">Claim for a dependant</dt> <dd><p>If you are the supporting family member (other than a spouse or common-law partner) of the person with the impairment, enter the disability amount on:<br><a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/line-31800-disability-amount-transferred-a-dependant.html">Line 31800 – Disability amount transferred from a dependant</a></p>
 </dd> <dt class="h3 mrgn-tp-0">Claim for a spouse or common-law partner</dt> <dd><p>If you are the spouse or common-law partner of the person with the impairment, enter the disability amount on:<br><a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/line-32600-amounts-transferred-your-spouse-common-law-partner.html">Line 32600 – Amounts transferred from your spouse or common-law partner</a></p>
 </dd> <dt class="h3 mrgn-tp-0">Claim made by more than one person</dt> <dd><p>If you and another person support the same dependant, you can split the claim for that dependant. However, the total amount of your claim and the other person’s claim cannot be more than the maximum amount allowed for that dependant.</p>
-</dd>
+</dd> <dt class="h3 mrgn-tp-0">Transfer part or all of the claim</dt> <dd><p>If you are the person with the impairment or a supporting family member and want to transfer the claim: <a href="#">Transferring the credit</a> </p>
+</dd> 
 </dl>
 <h3 id="med-prac">Medical practitioner fees</h3>
 <p>If the medical practitioner charged a fee for completing the DTC application or for providing information, you may be able to <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/lines-33099-33199-eligible-medical-expenses-you-claim-on-your-tax-return.html">claim the fee as medical expense</a> on lines 33099 or 33199 of your tax return.</p>
