--- a/DTC/disability-tax-credit.html
+++ b/DTC/disability-tax-credit.html
@@ -361,7 +361,8 @@ impairment, DTC certificate"/>
         <aside id="gcnav-side">
             <h2 class="h5 mrgn-tp-lg">Related information</h2>
             <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/segments/tax-credits-deductions-persons-disabilities/disability-tax-credit/demystifying-disability-tax-credit.html">Demystifying the Disability Tax Credit</a></li>
+                <li><a href="https://cra-design.github.io/Matt-Test/DTC/how-apply-dtc.html#h2-1">Form T2201, Disability Tax Credit Certificate</a></li>
+                <li><a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/segments/tax-credits-deductions-persons-disabilities/disability-tax-credit/demystifying-disability-tax-credit.html">Demystifying the Disability Tax Credit</a></li>
                 <li><a href="https://apps.cra-arc.gc.ca/ebci/uisp/dtc/entry/en">Digital application for medical practitioners</a></li>
                 <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/rc4064.html">Guide RC4064, <em>Disability-Related Information</em></a></li>
                 <li><a href="https://www.canada.ca/en/revenue-agency/services/tax/technical-information/income-tax/income-tax-folios-index/series-1-individuals/folio-1-health-medical/income-tax-folio-s1-f1-c2-disability-tax-credit.html">Income Tax Folio S1-F1-C2, <em>Disability Tax Credit</em></a></li>
