--- a/DTC/how-apply-dtc.html
+++ b/DTC/how-apply-dtc.html
@@ -474,13 +474,18 @@
 <p>You may apply for the DTC at any time during the year.</p>
 <p>However, if you submit your application at the same time that you file your tax return, there may be a delay in your tax assessment. The Canada Revenue Agency (CRA) will review your DTC application before your tax return is assessed.</p>
 <p>To avoid a possible delay, submit your DTC application before you file your tax return.</p>
+<h3>Decide who is claiming the credit</h3>
+<p>Before filling out your application, to avoid delays, decide on who is going to claim the credit</p>
+<p>If you intend to split or transfer the credit, it will save you time to include the supporting family member in Part A question 2 of the DTC application.</p>
+<p>For more details see, <a href="https://cra-design.github.io/Matt-Test/DTC/claiming-dtc.html#h1-1">Transferring the credit</a>.</p>
+
 <h2><a id="#toc1"></a>Fill out the application</h2>
 <p>You may apply for the DTC using the digital form or the printed paper form. <strong>Choose 1 method to apply:</strong></p>
 <section class="alert alert-warning mrgn-bttm-lg"><p>If you already applied using the paper form, do not&nbsp;apply again using the digital form. This will delay your application.</p>
-</section><div class="cnjnctn-type-or cnjnctn-sm"><div class="cnjnctn-col"><h3 class="mrgn-tp-sm text-muted">Use the digital form<span class="wb-inv">: Option 1 of 2</span></h3>
+</section><div class="cnjnctn-type-or cnjnctn-sm"><div class="cnjnctn-col"><h3 class="mrgn-tp-sm text-muted">Use the <a href="https://cra-design.github.io/Matt-Test/DTC/how-apply-dtc.html#h2-1">digital form</a><span class="wb-inv">: Option 1 of 2</span></h3>
 <p>You can apply online or by phone using the digital form.</p>
 </div>
-<div class="cnjnctn-col"><h4 class="mrgn-tp-sm text-muted">Use the paper form <span class="wb-inv">: Option 2 of 2</span></h4>
+<div class="cnjnctn-col"><h4 class="mrgn-tp-sm text-muted">Use the <a href="https://cra-design.github.io/Matt-Test/DTC/how-apply-dtc.html#h2-2">paper form</a> <span class="wb-inv">: Option 2 of 2</span></h4>
 <p>You can apply by mail using the paper form.</p>
 </div>
 </div>
