--- a/DTC/claiming-dtc.html
+++ b/DTC/claiming-dtc.html
@@ -309,7 +309,7 @@
 <h2 class="h3">On this page</h2>
 <ul>
 <li><a href="#h-1">Who can claim the DTC</a></li>
-<li><a href="trnsfr">Transferring the credit</a></li>
+<li><a href="#h1-1">Transferring the credit</a></li>
 <li><a href="#h-2">Claim amount for the 2024 tax year</a></li>
 <li><a href="#h-4">How to claim the DTC on your tax return</a></li>
 <li><a href="#h-3">Claiming for past years</a></li>
@@ -320,7 +320,7 @@
 <h3>If the CRA needs more information</h3>
 <p>In some cases, the CRA may send a letter asking for additional information to confirm who is claiming the credit. The letter will contain a reference number and instructions on what to do.</p>
 
-<h2 id="h-1-1">Transferring the credit</h2>
+<h2 id="h1-1">Transferring the credit</h2>
 <p>If the person with the impairment does not need the entire disability amount to reduce their income tax, they may transfer some or all of the disability amount to the supporting family member who is identified on the DTC application form (Part&nbsp;A&nbsp;question&nbsp;2).</p>
 <h3>Who qualifies as a supporting family member</h3>
 <p>A supporting family member is someone who the person with the impairment depends on for at least 1 of the <strong>basic necessities of life</strong> (food, shelter, and clothing).</p>
@@ -365,7 +365,7 @@
 </dd> <dt class="h3 mrgn-tp-0">Claim for a dependant</dt> <dd><p>If you are the supporting family member (other than a spouse or common-law partner) of the person with the impairment, enter the disability amount on:<br><a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/line-31800-disability-amount-transferred-a-dependant.html">Line 31800 – Disability amount transferred from a dependant</a></p>
 </dd> <dt class="h3 mrgn-tp-0">Claim for a spouse or common-law partner</dt> <dd><p>If you are the spouse or common-law partner of the person with the impairment, enter the disability amount on:<br><a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/line-32600-amounts-transferred-your-spouse-common-law-partner.html">Line 32600 – Amounts transferred from your spouse or common-law partner</a></p>
 </dd> <dt class="h3 mrgn-tp-0">Claim made by more than one person</dt> <dd><p>If you and another person support the same dependant, you can split the claim for that dependant. However, the total amount of your claim and the other person’s claim cannot be more than the maximum amount allowed for that dependant.</p>
-</dd> <dt class="h3 mrgn-tp-0">Transfer part or all of the claim</dt> <dd><p>If you are the person with the impairment or a supporting family member and want to transfer the claim: <a href="#">Transferring the credit</a> </p>
+</dd> <dt class="h3 mrgn-tp-0" id="trnsfr">Transfer part or all of the claim</dt> <dd><p>If you are the person with the impairment or a supporting family member and want to transfer the claim: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/line-31800-disability-amount-transferred-a-dependant.html">Line 31800 – Disability amount transferred from a dependant</a> </p>
 </dd> 
 </dl>
 <h3 id="med-prac">Medical practitioner fees</h3>
