--- a/DTC/how-apply-dtc.html
+++ b/DTC/how-apply-dtc.html
@@ -475,8 +475,7 @@
 <p>However, if you submit your application at the same time that you file your tax return, there may be a delay in your tax assessment. The Canada Revenue Agency (CRA) will review your DTC application before your tax return is assessed.</p>
 <p>To avoid a possible delay, submit your DTC application before you file your tax return.</p>
 <h3>Decide who is claiming the credit</h3>
-<p>Before filling out your application, to avoid delays, decide on who is going to claim the credit</p>
-<p>If you intend to split or transfer the credit, it will save you time to include the supporting family member in Part A question 2 of the DTC application.</p>
+<p>Before filling out your application, if you intend to split or transfer the credit, it will save you time to include the supporting family member in Part A question 2 of the DTC application.</p>
 <p>For more details see, <a href="https://cra-design.github.io/Matt-Test/DTC/claiming-dtc.html#h1-1">Transferring the credit</a>.</p>
 
 <h2><a id="#toc1"></a>Fill out the application</h2>
