--- a/DTC/disability-tax-credit.html
+++ b/DTC/disability-tax-credit.html
@@ -339,7 +339,7 @@ impairment, DTC certificate"/>
                 </dt>
                 <dd> Review eligibility criteria and find out if you should apply</dd>
                 <dt>
-                    <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/segments/tax-credits-deductions-persons-disabilities/disability-tax-credit/how-apply-dtc.html">How to apply<span class="wb-inv">: Disability tax credit (DTC)</span></a>
+                    <a href="https://cra-design.github.io/Matt-Test/DTC/how-apply-dtc.html">How to apply<span class="wb-inv">: Disability tax credit (DTC)</span></a>
                 </dt>
                 <dd> How to complete and submit the 2-part application</dd>
                 <dt>
@@ -347,7 +347,7 @@ impairment, DTC certificate"/>
                 </dt>
                 <dd> Understand the CRA's review process and what to do if your application is approved or denied</dd>
                 <dt>
-                    <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/segments/tax-credits-deductions-persons-disabilities/disability-tax-credit/claiming-dtc.html">Claiming the credit<span class="wb-inv">: Disability tax credit (DTC)</span></a>
+                    <a href="https://cra-design.github.io/Matt-Test/DTC/claiming-dtc.html">Claiming the credit<span class="wb-inv">: Disability tax credit (DTC)</span></a>
                 </dt>
                 <dd> How to claim the DTC on your income tax return</dd>
                 <dt>
@@ -361,7 +361,7 @@ impairment, DTC certificate"/>
         <aside id="gcnav-side">
             <h2 class="h5 mrgn-tp-lg">Related information</h2>
             <ul>
-                <li><a href="https://cra-design.github.io/Matt-Test/DTC/how-apply-dtc.html#h2-1">Form T2201, Disability Tax Credit Certificate</a></li>
+                <li><a href="https://cra-design.github.io/Matt-Test/DTC/t2201.html">Form T2201, Disability Tax Credit Certificate</a></li>
                 <li><a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/segments/tax-credits-deductions-persons-disabilities/disability-tax-credit/demystifying-disability-tax-credit.html">Demystifying the Disability Tax Credit</a></li>
                 <li><a href="https://apps.cra-arc.gc.ca/ebci/uisp/dtc/entry/en">Digital application for medical practitioners</a></li>
                 <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/rc4064.html">Guide RC4064, <em>Disability-Related Information</em></a></li>
