--- a/DTC/claiming-dtc.html
+++ b/DTC/claiming-dtc.html
@@ -334,7 +334,7 @@
 </ul>
 <h3>How to transfer the credit</h3>
 <p>If the supporting family member who wants to claim the credit was not identified on the initial application, they can submit a written request to the CRA for the transfer. This request must be signed and include details of the support they provide for the basic necessities of life.</p>
-<p>If the supporting family member was identified on the initial application, and it is approved, go to: <a href="">Transfer part or all of your claim</a></p>
+<p>If the supporting family member was identified on the initial application, and it is approved, go to: <a href="#trnsfr">Transfer part or all of your claim</a></p>
 <h2 id="h-2">Claim amounts for the 2024 tax year</h2>
 <p>Approved applicants who are 18 years and older (on the last day of the year) may claim the base disability amount. Those who are under 18 years old (on the last day of the year) may also claim the supplement for children with disabilities.</p>
 <p>Disability amounts for the 2024 tax year:</p>
