updates to anchor and new H3 - decide who is claiming the credit

--- a/DTC/how-apply-dtc.html
+++ b/DTC/how-apply-dtc.html
@@ -475,21 +475,21 @@
 <p>However, if you submit your application at the same time that you file your tax return, there may be a delay in your tax assessment. The Canada Revenue Agency (CRA) will review your DTC application before your tax return is assessed.</p>
 <p>To avoid a possible delay, submit your DTC application before you file your tax return.</p>
 <h3>Decide who is claiming the credit</h3>
-<p>Before filling out your application, if you intend to split or transfer the credit, it will save you time to include the supporting family member in Part A question 2 of the DTC application.</p>
+<p>If you intend to split or transfer the credit, it will save you time to include your supporting family member information in Part A question 2 of the DTC application.</p>
 <p>For more details see, <a href="https://cra-design.github.io/Matt-Test/DTC/claiming-dtc.html#h1-1">Transferring the credit</a>.</p>
 
 <h2><a id="#toc1"></a>Fill out the application</h2>
 <p>You may apply for the DTC using the digital form or the printed paper form. <strong>Choose 1 method to apply:</strong></p>
 <section class="alert alert-warning mrgn-bttm-lg"><p>If you already applied using the paper form, do not&nbsp;apply again using the digital form. This will delay your application.</p>
-</section><div class="cnjnctn-type-or cnjnctn-sm"><div class="cnjnctn-col"><h3 class="mrgn-tp-sm text-muted">Use the <a href="https://cra-design.github.io/Matt-Test/DTC/how-apply-dtc.html#h2-1">digital form</a><span class="wb-inv">: Option 1 of 2</span></h3>
+</section><div class="cnjnctn-type-or cnjnctn-sm"><div class="cnjnctn-col"><h3 class="mrgn-tp-sm text-muted">Use the <a href="https://cra-design.github.io/Matt-Test/DTC/how-apply-dtc.html#h2-1-1">digital form</a><span class="wb-inv">: Option 1 of 2</span></h3>
 <p>You can apply online or by phone using the digital form.</p>
 </div>
-<div class="cnjnctn-col"><h4 class="mrgn-tp-sm text-muted">Use the <a href="https://cra-design.github.io/Matt-Test/DTC/how-apply-dtc.html#h2-2">paper form</a> <span class="wb-inv">: Option 2 of 2</span></h4>
+<div class="cnjnctn-col"><h4 class="mrgn-tp-sm text-muted">Use the <a href="https://cra-design.github.io/Matt-Test/DTC/how-apply-dtc.html#h2-2-1">paper form</a> <span class="wb-inv">: Option 2 of 2</span></h4>
 <p>You can apply by mail using the paper form.</p>
 </div>
 </div>
 <div class="wb-tabs mrgn-tp-xl"><div class="tabpanels"><details id="h2-1"><summary>How to apply with the digital form</summary><div id="digital"><ol class="lst-stps">
-<li><strong>Applicant fills out Part&nbsp;A</strong><p class="mrgn-bttm-sm">The person with the impairment or their <a href="https://www.canada.ca/en/revenue-agency/services/tax/representative-authorization/legal-representative.html">legal representative</a> must fill out Part&nbsp;A of the digital application form.</p>
+<li id="h2-1-1"><strong>Applicant fills out Part&nbsp;A</strong><p class="mrgn-bttm-sm">The person with the impairment or their <a href="https://www.canada.ca/en/revenue-agency/services/tax/representative-authorization/legal-representative.html">legal representative</a> must fill out Part&nbsp;A of the digital application form.</p>
 <p>You may fill out Part&nbsp;A <strong>online or by phone</strong>.</p>
 <details class="small"><summary>How to fill out Part&nbsp;A online</summary><ol>
 <li>Sign in to <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">My&nbsp;Account</a></li>
@@ -553,7 +553,7 @@
 </ol>
 </div>
 </details> <details id="h2-2"><summary>How to apply with the paper form</summary><div id="paper"><ol class="lst-stps">
-<li><strong>Applicant fills out Part&nbsp;A</strong><p>The person with the impairment or their <a href="https://www.canada.ca/en/revenue-agency/services/tax/representative-authorization/legal-representative.html">legal representative</a> fills out Part&nbsp;A of the updated Form T2201, <em>Disability Tax Credit Certificate</em>:</p>
+<li id="h2-2-1"><strong>Applicant fills out Part&nbsp;A</strong><p>The person with the impairment or their <a href="https://www.canada.ca/en/revenue-agency/services/tax/representative-authorization/legal-representative.html">legal representative</a> fills out Part&nbsp;A of the updated Form T2201, <em>Disability Tax Credit Certificate</em>:</p>
 <p class="mrgn-bttm-md"><span class="far fa-file-alt"></span>&nbsp;<a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2201.html">Form T2201, <em>Disability Tax Credit Certificate</em></a></p>
 <details class="small"><summary>Information you need to provide</summary><ul>
 <li>Basic information about the person with the impairment</li>
