--- a/DTC/claiming-dtc.html
+++ b/DTC/claiming-dtc.html
@@ -239,7 +239,7 @@
 <li><a href='/en.html'>Canada.ca</a></li>
 <li><a href='/en/services/taxes.html'>Taxes</a></li>
 <li><a href='/en/services/taxes/child-and-family-benefits.html'>Tax credits and benefits for individuals</a></li>
-<li><a href='/en/revenue-agency/services/tax/individuals/segments/tax-credits-deductions-persons-disabilities/disability-tax-credit.html'>Disability tax credit (DTC)</a></li>
+<li><a href='https://cra-design.github.io/Matt-Test/DTC/disability-tax-credit.html'>Disability tax credit (DTC)</a></li>
 </ol></div></nav>
 
 
@@ -292,13 +292,13 @@
             <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/segments/tax-credits-deductions-persons-disabilities/disability-tax-credit/eligible-dtc.html">Who is eligible</a>
         </li>
         <li>
-            <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/segments/tax-credits-deductions-persons-disabilities/disability-tax-credit/how-apply-dtc.html">How to apply</a>
+            <a href="https://cra-design.github.io/Matt-Test/DTC/how-apply-dtc.html">How to apply</a>
         </li>
         <li>
             <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/segments/tax-credits-deductions-persons-disabilities/disability-tax-credit/review-decision-dtc.html">CRA's review and decision</a>
         </li>
         <li>
-            <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/segments/tax-credits-deductions-persons-disabilities/disability-tax-credit/claiming-dtc.html" class="active">Claiming the credit</a>
+            <a href="https://cra-design.github.io/Matt-Test/DTC/claiming-dtc.html" class="active">Claiming the credit</a>
         </li>
         <li>
             <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/segments/tax-credits-deductions-persons-disabilities/disability-tax-credit/contact-dtc.html">Contact the CRA</a>
