--- a/DTC/claiming-dtc.html
+++ b/DTC/claiming-dtc.html
@@ -334,7 +334,7 @@
 </ul>
 <h3>How to transfer the credit</h3>
 <p>If the supporting family member who wants to claim the credit was not identified on the initial application, they can submit a written request to the CRA for the transfer. This request must be signed and include details of the support they provide for the basic necessities of life.</p>
-<p>If the supporting family member was identified on the initial application, and it is approved, go to: <a href="#trnsfr">Claim for a dependant or transfer the claim</a></p>
+<p>If the supporting family member was identified on the initial application, and it is approved, go to: <a href="#trnsfr">Claim for a dependant or transfer the credit</a></p>
 <h2 id="h-2">Claim amounts for the 2024 tax year</h2>
 <p>Approved applicants who are 18 years and older (on the last day of the year) may claim the base disability amount. Those who are under 18 years old (on the last day of the year) may also claim the supplement for children with disabilities.</p>
 <p>Disability amounts for the 2024 tax year:</p>
@@ -362,7 +362,7 @@
 
 <dl class="dl-horizontal dt-max brdr-0 mrgn-bttm-sm">
 <dt class="h3 mrgn-tp-0">Claim for yourself</dt> <dd><p>If you are the person with the impairment, enter the disability amount on:<br><a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/line-31600-disability-amount-self.html">Line 31600 – Disability amount for self</a></p>
-</dd> <dt class="h3 mrgn-tp-0" id="trnsfr">Claim for a dependant or transfer the claim</dt> <dd><p>If you are the supporting family member (other than a spouse or common-law partner) of the person with the impairment, enter the disability amount on:<br><a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/line-31800-disability-amount-transferred-a-dependant.html">Line 31800 – Disability amount transferred from a dependant</a></p>
+</dd> <dt class="h3 mrgn-tp-0" id="trnsfr">Claim for a dependant or transfer the credit</dt> <dd><p>If you are the supporting family member (other than a spouse or common-law partner) of the person with the impairment, enter the disability amount on:<br><a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/line-31800-disability-amount-transferred-a-dependant.html">Line 31800 – Disability amount transferred from a dependant</a></p>
 </dd> <dt class="h3 mrgn-tp-0">Claim for a spouse or common-law partner</dt> <dd><p>If you are the spouse or common-law partner of the person with the impairment, enter the disability amount on:<br><a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/line-32600-amounts-transferred-your-spouse-common-law-partner.html">Line 32600 – Amounts transferred from your spouse or common-law partner</a></p>
 </dd> <dt class="h3 mrgn-tp-0">Claim made by more than one person</dt> <dd><p>If you and another person support the same dependant, you can split the claim for that dependant. However, the total amount of your claim and the other person’s claim cannot be more than the maximum amount allowed for that dependant.</p>
 </dd>
