--- a/DTC/how-apply-dtc2.html
+++ b/DTC/how-apply-dtc2.html
@@ -795,5 +795,5 @@ Winnipeg MB R3C 3M2</p>
 
 
 
-<script src="https://www.canada.ca/etc/designs/canada/wet-boew/méli-mélo/2024-09-kejimkujik.min.js"></script></body>
+<script src="https://www.canada.ca/etc/designs/canada/wet-boew/méli-mélo/2025-12-mille-iles.min.js"></script></body>
 </html>
